# bnuuy-time

./: Dockerfile  README.md  buns.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-app.yml
bnuuy_time/: __main__.py  buns.py  server.py  times.py  util.py
bnuuy_time/static/: about.css  buns.css  coverage.css  root.css  style.css  tz_redirect.js
tests/: angles_test.py
