[project]
name = "bnuuy-time"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "pyhtml-enhanced>=2.2.4",
    "uwsgi>=2.0.29",
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "mypy>=1.16.1",
    "pytest>=8.3.5",
    "ruff>=0.12.3",
]

[tool.mypy]
check_untyped_defs = true
files = ["bnuuy_time", "tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
