[project]
name = "bnuuy-time"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "granian>=2.7.4",
    "pyhtml-enhanced>=2.3.2",
]

[dependency-groups]
dev = [
    "coverage>=7.14.3",
    "mypy>=1.16.1",
    "pytest>=9.0.3",
    "ruff>=0.15.19",
]

[tool.uv]
# Exclude dependency releases newer than 1 week, in order to reduce supply-chain
# risk.
exclude-newer = "1 week"

[tool.mypy]
check_untyped_defs = true
files = ["bnuuy_time", "tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
